- Implemented sections, and handled state updation logic to adapt to this change.
- Optimised hover and animations in general

- Made the Chord Bar stick to view.

--- a/src/App.css
+++ b/src/App.css
@@ -12,7 +12,17 @@
     display: none;
   }
 
+  .chord-bar {
+    display: none;
+  }
+
   .remove-lyric {
+    display: none;
+  }
+  .remove-dynamicDrop {
+    display: none;
+  }
+  .remove-multiplier {
     display: none;
   }
   .canvas-content {
